Ran the notebook

--- a/Main_notebook.ipynb
+++ b/Main_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc8546940>"
+       "<matplotlib.legend.Legend at 0x28fc9c9fb80>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc85b5af0>"
+       "<matplotlib.legend.Legend at 0x28fc9d11d60>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc8620af0>"
+       "<matplotlib.legend.Legend at 0x28fc9d826d0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "105842.99484967359"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc86a8550>"
+       "<matplotlib.legend.Legend at 0x28fc9dff790>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28fc871e7c0>]"
+       "[<matplotlib.lines.Line2D at 0x28fc9e77790>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x28fc87966a0>"
+       "<matplotlib.collections.PathCollection at 0x28fcaec05e0>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "Text(0, 0.5, '$\\\\Delta$Frequency (Hz)')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1053,10 +1053,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc9919d30>"
+       "<matplotlib.legend.Legend at 0x28fcb010f40>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
        "843253009.1089897"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,16 +1131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc99d8610>"
+       "<matplotlib.legend.Legend at 0x28fcb0c47c0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1200,16 +1200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28fc9a55a30>"
+       "<matplotlib.legend.Legend at 0x28fcb196c10>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
